# deformers

./: .gitignore  pyproject.toml
.agents/: AGENTS.md
.github/: README.md
.logs/: 2026-05-08-prefix-model-tests.md
.project/: agents.md  decisions.md  ideas.md  issues.md  primer.jj  sources.md  structure.md
docs/: README.md  agents.md  context.md  decisions.md  ideas.md  index.md  invariants.md  issues.md  references.md  roadmap.md  sota.md  todo.md
logs/: 2026-04-05-stage-a-prefix.md  2026-04-09-benchmark-eval.md  2026-04-09-stage-a-monitoring.md
references/: 001-qwen-v3-5-9b-model-card.md  002-qwen-v3-5-9b-bpe-merges.md  003-nvidia-nemotron-v3-collection.md  004-nvidia-nemotron-v3-paper.md  005-nvidia-llama-nemotron-collection.md  006-nvidia-llama-nemotron-paper.md  007-gpt-oss-readme.md  008-vocabulary-transfer.md  009-unifyvocab.md  010-blip-2-q-former.md  011-openai-gpt-5-5-bio-bug-bounty.md  012-openai-instruction-hierarchy-challenge.md  013-openai-model-spec.md  014-iheval-evaluating-language-models-on-following-the-instruction-hierarchy.md  015-sysbench-can-large-language-models-follow-system-messages.md  016-control-illusion-the-failure-of-instruction-hierarchies-in-large-language-models.md  017-prompt-injection-as-role-confusion.md  018-many-tier-instruction-hierarchy.md  019-instructional-segment-embedding-ise.md  020-representation-engineering-a-top-down-approach-to-ai-transparency.md  021-representation-engineering-for-large-language-models.md  022-steering-language-models-with-activation-engineering.md  032-obliteratus.md  (+35 more)
scripts/: benchmark.py  (+4 more)
(+158 files in other folders)
